# iCubAudioRecognition

./: CMakeLists.txt  README.md
cmake/Modules/: FindWEBRTC.cmake
src/: CMakeLists.txt
src/PythonSpeechRecognizer/: audio_recognition_graph.pb  hotword.py  recognize.py
src/audioFiltering/: CMakeLists.txt
src/audioFiltering/include/: audioFilteringModule.h  audioFilteringRateThread.h
src/audioFiltering/src/: audioFilteringModule.cc  audioFilteringRateThread.cc  audio_filtering.cpp  main.cpp
