# Copyright: (C) 2017 TataLab
# Authors: Francesco Rea, Lukas Grasse, Austin Kothig, Matthew Tata
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)
add_subdirectory (audioFiltering)
#add_subdirectory (PythonSpeechRecognizer)
#add_subdirectory (PocketsphinxSpeechRecognizer)
